fix(ui/Login): form not aligned in center

--- a/packages/user/src/assets/css/login.css
+++ b/packages/user/src/assets/css/login.css
@@ -1,5 +1,5 @@
-.dz-page.login {
-  justify-items: center;
+.dz-page[data-centered="true"].login {
+  max-width: fit-content;
 }
 
 .login > .content > .redirect-message {
